--- a/SPS Website/about.html
+++ b/SPS Website/about.html
@@ -36,7 +36,7 @@
    <!-- <div class="address-bar"></div> -->
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -59,7 +59,10 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Events</a>
+                        <a href="blog.html">Updates</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Gallary</a>
                     </li>
                     <li>
                         <a href="contact.html">Officers</a>
@@ -67,9 +70,7 @@
                     <li>
                         <a href="contact.html">Documents</a>
                     </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -134,11 +135,13 @@ b) stimulate interest in the physical sciences. More specifically, SPS serves to
     </div>
     <!-- /.container -->
 
-    <footer>
+<!--footer: contact email, copyrights -->
+   <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
+                    </br>Copyright &copy; UCLA-SPS 2016</p>
                 </div>
             </div>
         </div>
