--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">UCLA Society of Phyiscs Student</div>
-    <div class="address-bar">Facebook |UAS |WPS</div>
+    <div class="brand">UCLA Society of Physics Students</div>
+    <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="http://www.facebook.com"><font color = "#00bfFF">Facebook</font></a></div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -59,7 +59,10 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Events</a>
+                        <a href="blog.html">Updates</a>
+                    </li>
+                    <li>
+                        <a href="about.html">Gallary</a>
                     </li>
                     <li>
                         <a href="contact.html">Officers</a>
@@ -67,9 +70,7 @@
                     <li>
                         <a href="contact.html">Documents</a>
                     </li>
-                    <li>
-                        <a href="contact.html">Contact</a>
-                    </li>
+                   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -139,15 +140,39 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Regular 
-                        <strong>meetings</strong>
+                    <h2 class="intro-text text-center">Get invovled:
+                        <strong>Regular meetings</strong>
                     </h2>
                     <hr>
                     <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                 </div>
+
+      <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center"> 
+                        <strong>Contact</strong>
+                    </h2>
+                    <hr>
+                    <p>FB</p>
+                </div>
             </div>
         </div>
+
+        <div class="row">
+            <div class="box">
+                <div class="col-lg-12">
+                    <hr>
+                    <h2 class="intro-text text-center">
+                        <strong>Links</strong>
+                    </h2>
+                    <hr>
+                    <img class="im-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
+                    <hr class="visible-xs">
+                    <p>sister clubs: LUAS, WPS; deparment websites...</p>
+            </div>
+        </div>
+
 
     </div>
     <!-- /.container -->
@@ -156,7 +181,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; UCLA-SPS 2016</p>
+                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
+                    </br>Copyright &copy; UCLA-SPS 2016</p>
                 </div>
             </div>
         </div>
