--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -1,44 +1,31 @@
+<!-- Scratch builf-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang ="en">
 
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>UCLA SPS</title>
-
-    <!-- Bootstrap Core CSS -->
+	 <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
-
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
-</head>
+	<title>UCLA SPS</title>
+
+	</head>
 
 <body>
-
+	<!--Main banner-->
     <div class="brand">UCLA Society of Physics Students</div>
     <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="http://www.facebook.com"><font color = "#00bfFF">Facebook</font></a></div>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
+	<!-- Navigation -->
+	 <nav class="navbar navbar-default" role="navigation">
+	 	<div class="container"> <!--navi container-->
+
+	 		<!-- Groupping toggle & banner better for Mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -46,10 +33,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+                <a class="navbar-brand" href="index.html">SPS</a> <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+
+             </div> <!--Mobile display-->
+
+            <!-- Collecting the nav links for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
@@ -74,13 +62,13 @@
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+        </div> <!--navi container-->
+	 </nav>
 
-    <div class="container">
+	 <!--Home page info boxes-->
+    <div class ="container">
 
-        <div class="row">
+    	 <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
                     <div id="carousel-example-generic" class="carousel slide">
@@ -91,7 +79,7 @@
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                         </ol>
 
-                        <!-- Wrapper for slides -->
+                        <!-- Home Images Slider -->
                         <div class="carousel-inner">
                             <div class="item active">
                                 <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
@@ -104,7 +92,7 @@
                             </div>
                         </div>
 
-                        <!-- Controls -->
+                        <!-- Image Slider Controls -->
                         <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                             <span class="icon-prev"></span>
                         </a>
@@ -112,95 +100,73 @@
                             <span class="icon-next"></span>
                         </a>
                     </div>
+
+                    <!--Welcome message below image slider-->
                     <h2 class="brand-before">
-                        <small>Welcome to</small>
-                    </h2>
-                    <h1 class="brand-name">SPS</h1>
+                        <small>Welcome to</small></h2> <h1 class="brand-name"> SPS</h1>
                     <hr class="tagline-divider">
                     
-                </div>
+                </div> <!--/Image slider-->
+            </div> <!--/Image box-->
+        </div> <!-- Iamge container-->
+
+
+        
+        <div class="row"> <!--Info Boxes put in a row-->
+
+        <!--Info Box 1: About-->
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center">About <strong>Our Club</strong></h2>
+                <hr>
+                <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
+                <hr class="visible-xs">
+                <p>The Society of Physics Students is ...</p>
             </div>
         </div>
 
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">About
-                        <strong>Our Club</strong>
-                    </h2>
-                    <hr>
-                    <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
-                    <hr class="visible-xs">
-                    <p>The Society of Physics Students is ...</p>
+        <!--Info Box 2: Meeting times-->
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center"> Get Involved:<strong> Regualer Meetings</strong></h2>
+                <hr>
+                <p>Blah</p>
             </div>
         </div>
 
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">Get invovled:
-                        <strong>Regular meetings</strong>
-                    </h2>
-                    <hr>
-                    <p>Use as many boxes as you like, and put anything you want in them! They are great for just about anything, the sky's the limit!</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                </div>
-
-      <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center"> 
-                        <strong>Contact</strong>
-                    </h2>
-                    <hr>
-                    <p>FB</p>
-                </div>
+        <!--Info Box 4: Links-->
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center"> <strong>Links</strong></h2>
+                <hr>
+                <p>Sister clubs: LUAS, WPS; department website</p>
             </div>
         </div>
 
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">
-                        <strong>Links</strong>
-                    </h2>
-                    <hr>
-                    <img class="im-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
-                    <hr class="visible-xs">
-                    <p>sister clubs: LUAS, WPS; deparment websites...</p>
+        <!--Info Box 3: Contact-->
+        <div class="box">
+            <div class="col-lg-12">
+                <hr>
+                <h2 class="intro-text text-center"> <strong>Contact</strong> </h2>
+                <hr>
+                <p>Blah</p>
             </div>
         </div>
 
 
-    </div>
-    <!-- /.container -->
+    </div> <!--second container (boxes)-->
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
-                    </br>Copyright &copy; UCLA-SPS 2016</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+	 	
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
 
-    <!-- Script to Activate the Carousel -->
-    <script>
-    $('.carousel').carousel({
-        interval: 5000 //changes the speed
-    })
-    </script>
+ 
+
+
+
 
 </body>
-
 </html>
