--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -1,4 +1,4 @@
-<!-- Scratch builf-->
+<!-- Scratch build-->
 <!DOCTYPE html>
 <html lang ="en">
 
@@ -19,7 +19,7 @@
 <body>
 	<!--Main banner-->
     <div class="brand">UCLA Society of Physics Students</div>
-    <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="http://www.facebook.com"><font color = "#00bfFF">Facebook</font></a></div>
+    <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
 
 	<!-- Navigation -->
 	 <nav class="navbar navbar-default" role="navigation">
@@ -44,10 +44,10 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="blog.html">Updates</a>
                     </li>
                     <li>
-                        <a href="blog.html">Updates</a>
+                        <a href="about.html">About</a>
                     </li>
                     <li>
                         <a href="about.html">Gallary</a>
@@ -161,7 +161,31 @@
 
 	 	
 
+<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
+                    </br><i>Copyright &copy; UCLA-SPS 2016.</i> Built with Bootstrap and <3 </p>
+                </div>
+            </div>
+        </div>
+</footer>
 
+
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Script to Activate the Carousel -->
+<script>
+$('.carousel').carousel({
+    interval: 5000 //changes the speed
+})
+</script>
 
  
 
