--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -14,7 +14,7 @@
 
 	<title>UCLA SPS</title>
 
-	</head>
+</head>
 
 <body>
 	<!--Main banner-->
@@ -44,7 +44,7 @@
                         <a href="index.html">Home</a>
                     </li>
                     <li>
-                        <a href="blog.html">Updates</a>
+                        <a href="updates.html">Updates</a>
                     </li>
                     <li>
                         <a href="about.html">About</a>
@@ -52,9 +52,15 @@
                     <li>
                         <a href="about.html">Gallary</a>
                     </li>
+
                     <li>
-                        <a href="contact.html">Officers</a>
+                        <a href="officer.html">Officers</a>
+                            <ul class ="dropdown">
+                                <li><a href="officer.html">2015-2016</a></li>
+                                <li><a href="#">2014-2015</a></li>
+                            </ul>
                     </li>
+
                     <li>
                         <a href="contact.html">Documents</a>
                     </li>
@@ -82,13 +88,13 @@
                         <!-- Home Images Slider -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/slide-1.jpg" alt="">
+                                <center><img src="img/eaf1.jpg" alt="" style="width: 460px; height: 360px">
+                            </div></center>
+                            <div class="item">
+                                <img class="img-responsive img-full" src="img/plasma.jpg" alt="" style="width: 650px; height: 460px">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-2.jpg" alt="">
-                            </div>
-                            <div class="item">
-                                <img class="img-responsive img-full" src="img/slide-3.jpg" alt="">
+                                <img class="img-responsive img-full" src="img/ard8.jpg" alt="" style="width: 600px; height: 460px">
                             </div>
                         </div>
 
