--- a/SPS Website/blog.html
+++ b/SPS Website/blog.html
@@ -2,43 +2,44 @@
 <html lang="en">
 
 <head>
+	<meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
+	    <meta name="description" content="">
+	    <meta name="author" content="">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	    <!-- Bootstrap Core CSS -->
+	    <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <title>Blog - Business Casual - Start Bootstrap Theme</title>
+	    <!-- Custom CSS -->
+	    <link href="css/business-casual.css" rel="stylesheet">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+	    <!-- Fonts -->
+	    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
+	    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+	    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	    <!--[if lt IE 9]>
+	        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	    <![endif]-->
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+	    <title>Updates</title>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
+	</head>
 
 <body>
-
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">3481 Melrose Place | Beverly Hills, CA 90210 | 123.456.7890</div>
+	<!--HEADER SAME-->
+    <!--Main banner-->
+    <div class="brand">UCLA Society of Physics Students</div>
+    <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
+     <nav class="navbar navbar-default" role="navigation">
+        <div class="container"> <!--navi container-->
+
+            <!-- Groupping toggle & banner better for Mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -46,101 +47,143 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
+                <a class="navbar-brand" href="index.html">SPS</a> <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
+
+             </div> <!--Mobile display-->
+
+            <!-- Collecting the nav links for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
                         <a href="index.html">Home</a>
                     </li>
                     <li>
+                        <a href="updates.html">Updates</a>
+                    </li>
+                    <li>
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="blog.html">Blog</a>
+                        <a href="about.html">Gallary</a>
                     </li>
+                    
                     <li>
-                        <a href="contact.html">Contact</a>
+                        <a href="officer.html">Officers</a>
+                            <ul class ="dropdown">
+                                <li><a href="officer.html">2015-2016</a></li>
+                                <li><a href="#">2014-2015</a></li>
+                            </ul>
                     </li>
+
+                    <li>
+                        <a href="contact.html">Documents</a>
+                    </li>
+                   
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+        </div> <!--navi container-->
+     </nav>
+	 <!--HEADER ENDS-->
 
-    <div class="container">
 
+
+	 <!--Update posts-->
+	 <div class="container">
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Company
-                        <strong>blog</strong>
-                    </h2>
+                    <h2 class="intro-text text-center">SPS <strong>Updates &amp; Annoucements</strong></h2>
                     <hr>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-1.jpg" alt="">
-                    <h2>Post Title
+
+
+    <!--POSTS-->
+                <!--Post #?-->
+                <div class="col-lg-12 ">  <!--text-center-->                
+                    <h2>SPS Fall Meeing #4: Arduino Workshop-part 1
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Nov 20, 2016</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Arduino tutorial:__</p>
+                    <img src="img/ard7.jpg" alt="" style="width: 600px; height:460px;">
+                    <p>Cool arudino stuff</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-2.jpg" alt="">
-                    <h2>Post Title
+                <!--/Post #?-->
+
+
+                <!--Post #?-->
+                <div class="col-lg-12 ">  <!--text-center-->                
+                    <h2>SPS Fall Meeing #3: Plasma Lab tour
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Nov 20, 2016</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Plasma Lab tour!</p>
+                    <img src="img/ard7.jpg" alt="" style="width: 600px; height:460px;">
+                    <p>SPS went to westwood plasma lab facility...</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
-                <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/slide-3.jpg" alt="">
-                    <h2>Post Title
+                <!--/Post #?-->
+
+
+                <!--Post #?-->
+                <div class="col-lg-12 ">  <!--text-center-->                
+                    <h2>EYU 2016:blah
                         <br>
-                        <small>October 13, 2013</small>
+                        <small>Nov 20, 2016</small>
                     </h2>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Undergrad Research Center (URC) Fair</p>
+                    <img src="img/urc1.jpg" alt="URC" style="width: 420px; height:500px;">
+                    <p>URC...</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
+                <!--/Post #?-->
+
+
                 <div class="col-lg-12 text-center">
                     <ul class="pager">
-                        <li class="previous"><a href="#">&larr; Older</a>
-                        </li>
-                        <li class="next"><a href="#">Newer &rarr;</a>
-                        </li>
+                        <li class="previous"><a href="#">&larr; Older</a></li>
+                        <li class="next"><a href="#">Newer &rarr;</a></li>
                     </ul>
                 </div>
             </div>
         </div>
-
     </div>
     <!-- /.container -->
 
-    <footer>
+
+
+
+<footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Your Website 2014</p>
+                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
+                    </br><i>Copyright &copy; UCLA-SPS 2016.</i> Built with Bootstrap and <3 </p>
                 </div>
             </div>
         </div>
-    </footer>
+</footer>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
+<!-- Script to Activate the Carousel -->
+<script>
+$('.carousel').carousel({
+    interval: 5000 //changes the speed
+})
+</script>
 
 </body>
 
