--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -1,9 +1,9 @@
-<!-- Scratch build-->
+<!-- Scratch builf-->
 <!DOCTYPE html>
 <html lang ="en">
 
 <head>
-	 <!-- Bootstrap Core CSS -->
+     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
@@ -11,21 +11,24 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-	<title>UCLA SPS</title>
+    <title>UCLA SPS</title>
 
-</head>
+
+    </head>
 
 <body>
-	<!--Main banner-->
+    <!--Main banner-->
     <div class="brand">UCLA Society of Physics Students</div>
     <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
 
-	<!-- Navigation -->
-	 <nav class="navbar navbar-default" role="navigation">
-	 	<div class="container"> <!--navi container-->
+    <!-- Navigation -->
+     <nav class="navbar navbar-default" role="navigation">
+        <div class="container"> <!--navi container-->
 
-	 		<!-- Groupping toggle & banner better for Mobile display -->
+            <!-- Groupping toggle & banner better for Mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -50,16 +53,16 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="about.html">Gallary</a>
+                        <a href="about.html">Gallery</a>
                     </li>
 
-                    <li>
-                        <a href="officer.html">Officers</a>
+                        <li>
+                            <a href="officer.html">Officers</a>
                             <ul class ="dropdown">
                                 <li><a href="officer.html">2015-2016</a></li>
                                 <li><a href="#">2014-2015</a></li>
                             </ul>
-                    </li>
+                        </li>
 
                     <li>
                         <a href="contact.html">Documents</a>
@@ -69,12 +72,12 @@
             </div>
             <!-- /.navbar-collapse -->
         </div> <!--navi container-->
-	 </nav>
+     </nav>
 
-	 <!--Home page info boxes-->
+     <!--Home page info boxes-->
     <div class ="container">
 
-    	 <div class="row">
+         <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
                     <div id="carousel-example-generic" class="carousel slide">
@@ -91,10 +94,10 @@
                                 <center><img src="img/eaf1.jpg" alt="" style="width: 460px; height: 360px">
                             </div></center>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/plasma.jpg" alt="" style="width: 650px; height: 460px">
+                                <img class="img-responsive img-full" src="img/plasma2.jpg" alt="" style="width: 650px; height: 460px">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/ard8.jpg" alt="" style="width: 600px; height: 460px">
+                                <img class="img-responsive img-full" src="img/ard13.jpg" alt="" style="width: 600px; height: 460px">
                             </div>
                         </div>
 
@@ -124,11 +127,11 @@
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center">About <strong>Our Club</strong></h2>
+                <h2 class="intro-text text-center">Our<strong> Club</strong></h2>
                 <hr>
-                <img class="img-responsive img-border img-left" src="img/intro-pic.jpg" alt="">
+                <img class="img-responsive img-border img-left" src="img/night.jpg" style="width: 260px; height:190px";>
                 <hr class="visible-xs">
-                <p>The Society of Physics Students is ...</p>
+                <p>UCLA's Society of Physics Students (SPS) is both an academic and social club where students from various disciplines who are interested in physics or physics-related activities come together to have fun and learn new things. </p>
             </div>
         </div>
 
@@ -138,7 +141,7 @@
                 <hr>
                 <h2 class="intro-text text-center"> Get Involved:<strong> Regualer Meetings</strong></h2>
                 <hr>
-                <p>Blah</p>
+                <p>We meet on <b>Tuesday</b> evening from <b>6-7 pm</b> in <b>Knudsen 2-222 </b> during <b>ODD</b> weeks (week 1, 3, 5...) of the Fall, Spring, and Winter quarters. Free food is provided. There is nothing to sign up for; everyone, including non-physics majors, is welcome! Join our <u>mailing list</u> to get updates about upcoming club events.</p>
             </div>
         </div>
 
@@ -147,8 +150,17 @@
             <div class="col-lg-12">
                 <hr>
                 <h2 class="intro-text text-center"> <strong>Links</strong></h2>
-                <hr>
-                <p>Sister clubs: LUAS, WPS; department website</p>
+                <hr>  
+                <font size="3px"> 
+                <p>  
+                    <li><a href="https://www.facebook.com/groups/2200612983/"> &#x261E; SPS FB Group</a></li>
+                    <li><a href="https://www.facebook.com/groups/175446515830777/">&#9832; UCLA Physics Study Group</a></li>
+                    <li> <a href="http://www.pa.ucla.edu/">&#9883; UCLA Department of Physics and Astronomy</a></li>
+                    <li><a href="http://uas.physics.ucla.edu/">&#9790;&#9734; Our sister club: UCLA Undergraduate Astronomical Society</a></li>
+                    <li><a href="http://ugradwomen.pa.ucla.edu/">&#9880; Our sister club: UCLA Women in Physical Sciences</a></li>
+                    <li><a href="http://ephysics.physics.ucla.edu/">&#9786; Cool Phyiscs toys</a></li>
+            </font>
+            </p>
             </div>
         </div>
 
@@ -158,40 +170,37 @@
                 <hr>
                 <h2 class="intro-text text-center"> <strong>Contact</strong> </h2>
                 <hr>
-                <p>Blah</p>
+                <p>Email <u>sps.ucla@gmail.com</u> for any questions, we'll get back to you ASAP! Officers can also be most effectively reached through the UCLA <a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#1976d2"><u>SPS Facebook Group</u></a></font>.</p>
             </div>
         </div>
 
 
     </div> <!--second container (boxes)-->
 
-	 	
+        
 
 <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
-                    </br><i>Copyright &copy; UCLA-SPS 2016.</i> Built with Bootstrap and <3 </p>
+                    <p> Copyright &copy; <i>UCLA-SPS 2016</i>. Built with Bootstrap and <3 </p>
                 </div>
             </div>
         </div>
-</footer>
+    </footer>
 
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
 
+    <!-- Bootstrap Core JavaScript -->
+    <script src="js/bootstrap.min.js"></script>
 
-<!-- jQuery -->
-<script src="js/jquery.js"></script>
-
-<!-- Bootstrap Core JavaScript -->
-<script src="js/bootstrap.min.js"></script>
-
-<!-- Script to Activate the Carousel -->
-<script>
-$('.carousel').carousel({
-    interval: 5000 //changes the speed
-})
-</script>
+    <!-- Script to Activate the Carousel -->
+    <script>
+    $('.carousel').carousel({
+        interval: 5000 //changes the speed
+    })
+    </script>
 
  
 
