--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!--font-awesome icons-->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <title>UCLA SPS</title>
 
@@ -20,6 +21,7 @@
     </head>
 
 <body>
+    
     <!--Main banner-->
     <div class="brand">UCLA Society of Physics Students</div>
     <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
@@ -53,7 +55,7 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="about.html">Gallery</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
 
                         <li>
