--- a/SPS Website/updates.html
+++ b/SPS Website/updates.html
@@ -30,6 +30,7 @@
     </head>
 
 <body>
+
     <!--Main banner-->
     <div class="brand">UCLA Society of Physics Students</div>
     <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
@@ -63,11 +64,11 @@
                         <a href="about.html">About</a>
                     </li>
                     <li>
-                        <a href="about.html">Gallary</a>
+                        <a href="gallery.html">Gallery</a>
                     </li>
                     
                     <li>
-                        <a href="officer.html">Officers</a>
+                        <a href="officers.html">Officers</a>
                             <ul class ="dropdown">
                                 <li><a href="officer.html">2015-2016</a></li>
                                 <li><a href="#">2014-2015</a></li>
@@ -84,45 +85,62 @@
         </div> <!--navi container-->
      </nav>
 
-
-
-
-
      <div class="container">
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">SPS <strong>Updates &amp; Annoucements</strong></h2>
+                    <h2 class="intro-text text-center">SPS <strong>Updates &amp; Announcements</strong></h2>
                     <hr>
                 </div>
 
+
+        <!--tweets-->
+        <div class="col-lg-12 text-center">
+        <a class="twitter-timeline" data-width="580" data-height="470" data-theme="light" data-link-color="#2B7BB9" href="https://twitter.com/uclasps">Live tweets by SPS</a> 
+        <hr>
+    </div>
+
+        <!--/tweets-->
 
     <!--POSTS-->
-                <!--Post #?-->
-                <div class="col-lg-12 " >  <!--text-center-->                
-                    <h2>SPS Fall Meeing #4: Arduino Workshop-part 1
+                 <!--Post #?-->
+                 <div class="col-lg-12  text-center">  <!--text-center-->                
+                    <h3 style ="font-family: arial; font-weight: 500px;">[SPS Fall Meeting] Week 9: Arduino Workshop Part 2
                         <br>
-                        <small>Nov 20, 2016</small>
-                    </h2>
-                    <p>Arduino tutorial:__</p>
+                        <small>Nov 23, 2016</small>
+                    </h3>
+                    <p>Time to enter the labyrinth!</p>
+                    <img src="img/ard13.jpg" alt="" style="width: 600px; height:460px;">
+                    <p style="margin-left:5em;" align="left">This week at Society of Physics Students, students got to program a robot to navigate some treacherous mazes! Students are encourgaed to compete with friends to see whose code brings their robot to the end first! Challenge modes available for those eager to test their coding skills to the limit! And happy Thanksgiving everyone!</p>
+                    <hr>
+                </div>
+                <!--/Post #?-->
+
+
+                <!--Post #?-->
+                 <div class="col-lg-12  text-center">  <!--text-center-->                
+                    <h3 style ="font-family: arial; font-weight: 500px;">[SPS Fall Meeting] Week7: Arduino Workshop Part 1
+                        <br>
+                        <small>Nov 15, 2016</small>
+                    </h3>
+                    <p>Ever wanted to learn how to program a robot to navigate a maze?</p>
                     <img src="img/ard7.jpg" alt="" style="width: 600px; height:460px;">
-                    <p>Cool arudino stuff</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+                    <p style="margin-left:5em;" align="left" >Now you can with Arduino, an open-source electronics platform that allows you to code commands to control motors, power LEDs, and more! This week, we went over the basics of Arduino hardware and how servo motors work, and we also showcased our Whack-a-Mole circuit game from last spring!<br>This is part 1 of our 2-part Arduino Workshop, to be continued in Week 9!</p>
                     <hr>
                 </div>
                 <!--/Post #?-->
 
 
                 <!--Post #?-->
-                <div class="col-lg-12 ">  <!--text-center-->                
-                    <h2>SPS Fall Meeing #3: Plasma Lab tour
+                <div class="col-lg-12 text-center">  <!--text-center-->                
+                    <h3 style ="font-family: arial; font-weight: 500px;">[SPS Fall Meeing] Week 3: Plasma Lab tour
                         <br>
-                        <small>Nov 20, 2016</small>
-                    </h2>
+                        <small>Nov 9, 2016</small>
+                    </h3>
                     <p>Plasma Lab tour!</p>
-                   
-                    <p>SPS went to westwood plasma lab facility...</p>
+                    <img src="img/plasma2.jpg" alt="" style="width: 600px; height:460px;">
+                    <p style="margin-left:5em;">This week SPS went to LAPD plasma lab facility in Westwood.</p>
                     <a href="#" class="btn btn-default btn-lg">Read More</a>
                     <hr>
                 </div>
@@ -130,15 +148,16 @@
 
 
                 <!--Post #?-->
-                <div class="col-lg-12 ">  <!--text-center-->                
-                    <h2>EYU 2016:blah
+                <div class="col-lg-12 text-center">  <!--text-center-->                
+                    <h3 style ="font-family: arial; font-weight: 500px;">Start of Fall Quarter: EAF and URC Fairs
                         <br>
-                        <small>Nov 20, 2016</small>
-                    </h2>
-                    <p>Undergrad Research Center (URC) Fair</p>
-                    <img src="img/urc1.jpg" alt="URC" style="width: 420px; height:500px;">
-                    <p>URC...</p>
-                    <a href="#" class="btn btn-default btn-lg">Read More</a>
+                        <small>Oct 20, 2016</small>
+                    </h3>
+                    <p>Enorumous Activities Fair and Undergrad Research Center (URC) Fair.</p>
+                    <img src="img/urc1.jpg" alt="URC" style="width: 400px; height:410px;"><br><br>
+                    <img src="img/eaf1.jpg" alt="eaf" style="width: 440px; height:380px;">
+                    <p style="margin-left:5em;" align="left"></p>
+                    <!--<a href="#" class="btn btn-default btn-lg">Read More</a>-->
                     <hr>
                 </div>
                 <!--/Post #?-->
@@ -174,3 +193,22 @@
 </body>
 
 </html>
+
+
+<script>window.twttr = (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0],
+    t = window.twttr || {};
+  if (d.getElementById(id)) return t;
+  js = d.createElement(s);
+  js.id = id;
+  js.src = "https://platform.twitter.com/widgets.js";
+  fjs.parentNode.insertBefore(js, fjs);
+
+  t._e = [];
+  t.ready = function(f) {
+    t._e.push(f);
+  };
+
+  return t;
+}(document, "script", "twitter-wjs"));</script>
+
