--- a/SPS Website/officers.html
+++ b/SPS Website/officers.html
@@ -58,7 +58,7 @@
                         <a href="about.html">Gallary</a>
                     </li>
                     <li>
-                        <a href="officer.html">Officers</a>
+                        <a href="officers.html">Officers</a>
                     </li>
                     <li>
                         <a href="contact.html">Documents</a>
