--- a/SPS Website/about.html
+++ b/SPS Website/about.html
@@ -86,16 +86,16 @@
                 <!--Title text-->
 
                 <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/spslogo.jpg" alt="">
+                    <img class="img-responsive img-border-left" src="img/spslogo.jpg" alt=""style="width: 90%; height:90%">
                     <br>
-                    <img class="img-responsive img-border-left" src="img/ucla2.jpg" alt="" style="width: 550px; height:230px">
+                    <!--<img class="img-responsive img-border-left" src="img/ucla2.jpg" alt="" style="width: 70%; height:70%">-->
                      <!--<img class="img-responsive img-border-left" src="img/ucla2.jpg" alt="" style="width: 550px; height:230px">-->
                 </div>
 
                 <!--Description text-->
-                <div class="col-md-6">
+                <div class="col-md-6" style="font-family:verdana; font-size:13px">
                     <p>The <i>Society of Physics Students </i> is a national, inter-collegiate organization operating under the aegis of the American Institute of Physics (APS). 
-                    <br>The objectives of the Society of Physics Students are to:</br>
+                    The objectives of the Society of Physics Students are to:</br>
                     <strong>a)</strong> Encourage and assist students interested in physics to develop the knowledge, competence, enthusiasm, and the social responsibility essential to the advancement of physics. <strong>b)
                 </strong> Stimulate interest in the physical sciences. 
 
@@ -146,12 +146,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
-                    </br><i>Copyright &copy; UCLA-SPS 2016.</i> Built with Bootstrap and <3 </p>
+                    <p>&copy; UCLA-SPS 2016. Built with Bootstrap and <3 </p>
                 </div>
             </div>
         </div>
-</footer>
+    </footer>
 
 
 
