--- a/SPS Website/gallery.html
+++ b/SPS Website/gallery.html
@@ -80,10 +80,19 @@
   <center>
     <embed type="application/x-shockwave-flash" src="https://photos.gstatic.com/media/slideshow.swf" width="900" height="560" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F102595540501524578755%2Falbumid%2F6067897752377567841%3Falt%3Drss%26kind%3Dphoto%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
     <!-- Flicker: <a data-flickr-embed="true" data-footer="true"  href="https://www.flickr.com/photos/145162727@N08/albums/72157675715150000" title="SPS 2016-2017"><img src="https://c6.staticflickr.com/6/5507/30420824053_234b52cc4d.jpg" width="500" height="375" alt="SPS 2016-2017"></a>-->
+   <hr>
    </center> 
 
 
   <!--/Slideshow-->
-
-</body>
+  
+<footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <p>&copy; UCLA-SPS 2016. Built with Bootstrap and <3 </p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </html>
