--- a/SPS Website/officers.html
+++ b/SPS Website/officers.html
@@ -82,57 +82,80 @@
 
 
                 <!--Officers Bio Section-->
-                <div class="col-md-6 text-center">
+                <div class="col-lg-12 text-center">
+                    <center>
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="" style="height: 270px; width:450px">
                     <h3>John Smith <small>Job Title</small></h3>
-                    <p align="left">John is a...</p>
+                    <p align="center">John is a...</p>
+                    <hr>
+                </center>
                 </div>
                 
                 <div class="col-md-6 text-center">
+                    <center>
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="" style="height: 270px; width:450px">
                     <h3>John Smith <small>Job Title</small></h3>
-                    <p align="left">John is a...</p>
+                    <p align="center">John is a...</p>
+                    <hr>
+                    </center>
                 </div>
 
 
 
                 <div class="col-md-6 text-center">
+                    <center>
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="" style="height: 270px; width:450px">
                     <h3>John Smith <small>Job Title</small></h3>
-                    <p align="left">John is a...</p>
+                    <p align="center">John is a...</p>
+                    <hr>
+                    </center>
                 </div>
 
                 <div class="col-md-6 text-center">
+                    <center>
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="" style="height: 270px; width:450px">
                     <h3>John Smith <small>Job Title</small></h3>
-                    <p align="left">John is a...</p>
+                    <p align="center">John is a...</p>
+                    <hr>
+                </center>
                 </div>
 
 
                 <div class="col-md-6 text-center">
+                    <center>
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="" style="height: 270px; width:450px">
                     <h3>John Smith <small>Job Title</small></h3>
-                    <p align="left">John is a...</p>
+                    <p align="center">John is a...</p>
+                    <hr>
+                    </center>
                 </div>
                 
 
                 <div class="col-md-6 text-center">
+                    <center>
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="" style="height: 270px; width:450px">
                     <h3>John Smith <small>Job Title</small></h3>
-                    <p align="left">John is a...</p>
+                    <p align="center">John is a...</p>
+                    <hr>
+                     </center>
                 </div>
 
 
                 <div class="col-md-6 text-center">
+                    <center>
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="" style="height: 270px; width:450px">
                     <h3>John Smith <small>Job Title</small></h3>
-                    <p align="left">John is a...</p>
+                    <p align="center">John is a...</p>
+                    <hr>
+                </center>
                 </div>
 
-                <div class="col-md-6 text-center">
+                <div class="col-lg-12 text-center">
+                    <center>
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="" style="height: 270px; width:450px">
                     <h3>John Smith <small>Job Title</small></h3>
-                    <p align="left">John is a...</p>
+                    <p align="center">John is a...</p>
+                </center>
                 </div>
 
                 <div class="clearfix"></div>
@@ -194,8 +217,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Email <u>uclasps@gmail.com</u> for any questions, we'll get back to you asap!<br>
-                    </br><i>Copyright &copy; UCLA-SPS 2016.</i> Built with Bootstrap and <3 </p>
+                    <p>&copy; UCLA-SPS 2016. Built with Bootstrap and <3 </p>
                 </div>
             </div>
         </div>
