--- a/SPS Website/gallery.html
+++ b/SPS Website/gallery.html
@@ -60,8 +60,9 @@
                         <li>
                             <a href="officers.html">Officers</a>
                             <ul class ="dropdown">
-                                <li><a href="officers.html">2015-2016</a></li>
-                                <li><a href="#">2014-2015</a></li>
+                                <li><a href="officers.html">2016-2017</a></li>
+                                <li><a href="#">2015-2016</a></li>
+                                <li><a href="officers1415.html">2014-2015</a></li>
                             </ul>
                         </li>
 
@@ -85,7 +86,7 @@
 
 
   <!--/Slideshow-->
-  
+
 <footer>
         <div class="container">
             <div class="row">
