--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -68,7 +68,7 @@
                         </li>
 
                     <li>
-                        <a href="contact.html">Documents</a>
+                        <a href="documents.html">Documents</a>
                     </li>
                    
                 </ul>
