--- a/SPS Website/updates.html
+++ b/SPS Website/updates.html
@@ -77,7 +77,7 @@
                         </li>
 
                     <li>
-                        <a href="contact.html">Documents</a>
+                        <a href="documents.html">Documents</a>
                     </li>
                    
                 </ul>
