--- a/SPS Website/about.html
+++ b/SPS Website/about.html
@@ -65,7 +65,7 @@
                         </li>
 
                     <li>
-                        <a href="contact.html">Documents</a>
+                        <a href="documents.html">Documents</a>
                     </li>
                    
                 </ul>
