--- a/SPS Website/gallery.html
+++ b/SPS Website/gallery.html
@@ -6,7 +6,7 @@
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+    <link href="css/theme.css" rel="stylesheet">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
@@ -16,14 +16,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <title>UCLA SPS</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
 
 
 </head>
 
 <body>
     <!--Main banner-->
-    <div class="brand">UCLA Society of Physics Students</div>
-    <div class="address-bar">The one and only undergrad physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#00bfFF">Facebook</font></a></div>
+    <div class="brand" style ="font-family: sans-serif; font-weight: 300px;"><img src="img/ucla2.jpg" style="width: 17%; height: 17%; opacity:0.92"> Society of Physics Students</div>
+    <div class="address-bar">Undergraduate physics club @ UCLA |<a href="https://www.facebook.com/groups/UCLA.SPS/"><font color = "#ffcc33"> Facebook</font></a>| <a href="https://twitter.com/uclasps/"><font color = "#ffcc33">Twitter</font></a></div>
+
 
     <!-- Navigation -->
      <nav class="navbar navbar-default" role="navigation">
@@ -68,6 +70,10 @@
 
                     <li>
                         <a href="documents.html">Documents</a>
+                         <ul class ="dropdown">
+                                <li><a href="arduino.html">•Arduino</a></li>
+                                <li><a href="logistics.html">•Logistics</a></li>
+                        </ul>
                     </li>
                    
                 </ul>
@@ -77,21 +83,23 @@
      </nav>
 
 
-  <!--Slideshow-->
-  <center>
-    <embed type="application/x-shockwave-flash" src="https://photos.gstatic.com/media/slideshow.swf" width="900" height="560" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F102595540501524578755%2Falbumid%2F6067897752377567841%3Falt%3Drss%26kind%3Dphoto%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
-    <!-- Flicker: <a data-flickr-embed="true" data-footer="true"  href="https://www.flickr.com/photos/145162727@N08/albums/72157675715150000" title="SPS 2016-2017"><img src="https://c6.staticflickr.com/6/5507/30420824053_234b52cc4d.jpg" width="500" height="375" alt="SPS 2016-2017"></a>-->
-   <hr>
-   </center> 
+    <!--Slideshow-->
+    <center>
+      <embed type="application/x-shockwave-flash" src="https://photos.gstatic.com/media/slideshow.swf" width="900" height="490" flashvars="host=picasaweb.google.com&hl=en_US&feat=flashalbum&RGB=0x000000&feed=https%3A%2F%2Fpicasaweb.google.com%2Fdata%2Ffeed%2Fapi%2Fuser%2F102595540501524578755%2Falbumid%2F6067897752377567841%3Falt%3Drss%26kind%3Dphoto%26hl%3Den_US" pluginspage="http://www.macromedia.com/go/getflashplayer"></embed>
+      <!-- Flicker: <a data-flickr-embed="true" data-footer="true"  href="https://www.flickr.com/photos/145162727@N08/albums/72157675715150000" title="SPS 2016-2017"><img src="https://c6.staticflickr.com/6/5507/30420824053_234b52cc4d.jpg" width="500" height="375" alt="SPS 2016-2017"></a>-->
+     <hr>
+     </center> 
 
 
-  <!--/Slideshow-->
+    <!--/Slideshow-->
+
+</body>
 
 <footer>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>&copy; UCLA-SPS 2016. Built with Bootstrap and <3 </p>
+                    <p style="font-family:verdana; font-size:13px">&copy; UCLA-SPS 2016 </p>
                 </div>
             </div>
         </div>
