--- a/SPS Website/index.html
+++ b/SPS Website/index.html
@@ -1,4 +1,17 @@
-<!-- Scratch build-->
+<!--
+License:
+Start Bootstrap was created by and is maintained by **[David Miller](http://davidmiller.io/)**, Owner of [Blackrock Digital](http://blackrockdigital.io/).
+
+* https://twitter.com/davidmillerskt
+* https://github.com/davidtmiller
+
+Start Bootstrap is based on the [Bootstrap](http://getbootstrap.com/) framework created by [Mark Otto](https://twitter.com/mdo) and [Jacob Thorton](https://twitter.com/fat).
+
+## Copyright and License
+
+Copyright 2013-2016 Blackrock Digital LLC. Code released under the [MIT](https://github.com/BlackrockDigital/startbootstrap-business-casual/blob/gh-pages/LICENSE) license.
+-->
+
 <!DOCTYPE html>
 <html lang ="en">
 
@@ -95,20 +108,20 @@
                             <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                         </ol>
 
-                        <!-- Home Images Slider -->
+                        <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <center><img src="img/eaf1.jpg" alt="" style="width: 460px; height: 360px">
+                                <center><img class="img-responsive" src="img/eaf1.jpg" alt="" style="width: 50%; height: 50%"></center>
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/plasma2.jpg" alt="" style="width: 650px; height: 460px">
+                                <center><img class="img-responsive" src="img/ardpres.jpg" alt="" style="width: 50%; height: 50%"></center>
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/ard13.jpg" alt="" style="width: 600px; height: 460px">
+                                <center><img class="img-responsive" src="img/ard13.jpg" alt=""style="width: 50%; height: 50%"></center>
                             </div>
-                        </div></center>
+                        </div>
 
-                        <!-- Image Slider Controls -->
+                        <!-- Controls -->
                         <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
                             <span class="icon-prev"></span>
                         </a>
@@ -146,13 +159,13 @@
         <div class="box">
             <div class="col-lg-12">
                 <hr>
-                <h2 class="intro-text text-center"><strong> Regualer Meetings</strong></h2>
+                <h2 class="intro-text text-center"><strong> Regular Meetings</strong></h2>
                 <hr>
                 <p style="font-family:verdana; font-size:16px">We meet on <b>Tuesday</b> evening at <b>6pm</b> in <b>Knudsen 2-222 </b> during <b>ODD</b> weeks (week 1, 3, 5...) of the Fall, Spring, and Winter quarters. Free food is provided! There is nothing to sign up for; everyone, including non-physics majors, is welcome! 
-                <br>Visit our <a href="updates.html">Updates</a> page for latest events! You can also join our mailing list below to get notified for club meetings:</p>
-                <center>
-                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdAtiIYprFBXjKrkGPYwEdHpCVZ1fZuGADIMRxWLtIJk11xAg/viewform?embedded=true" width="860" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-                </center>
+                <br>Visit our <a href="updates.html">Updates</a> page for latest events! You can also join <a href="https://docs.google.com/forms/d/e/1FAIpQLSdAtiIYprFBXjKrkGPYwEdHpCVZ1fZuGADIMRxWLtIJk11xAg/viewform">our mailing list </a>to get notified for club meetings.</p>
+                <!--<center>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdAtiIYprFBXjKrkGPYwEdHpCVZ1fZuGADIMRxWLtIJk11xAg/viewform?embedded=true" width="100%" height="200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                </center>-->
             </div>
         </div>
 
@@ -169,7 +182,7 @@
                     <li> <a href="http://www.pa.ucla.edu/">&#9883; UCLA Department of Physics and Astronomy</a></li>
                     <li><a href="http://uas.physics.ucla.edu/">&#9734; Our sister club: UCLA Undergraduate Astronomical Society (UAS)</a></li>
                     <li><a href="http://ugradwomen.pa.ucla.edu/">&#9880; Our sister club: UCLA Women in Physical Sciences (WPS)</a></li>
-                    <li><a href="http://ephysics.physics.ucla.edu/">&#9786; Cool Phyiscs toys</a></li>
+                    <li><a href="http://ephysics.physics.ucla.edu/">&#9786; Cool Physics toys</a></li>
             </font>
             </p>
             </div>
